--- a/wangbaobao.conf
+++ b/wangbaobao.conf
@@ -11,11 +11,11 @@ server=1.0.0.1
 server=8.8.8.8
 
 [policy]
-static=🚀 节点选择, ♻️ 自动选择, DIRECT, 
-static=♻️ 自动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Auto.png
+static=🚀 节点选择, ♻️ 自动选择, DIRECT, 34
+static=♻️ 自动选择, 34, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Auto.png
 static=🎯 全球直连, DIRECT, 🚀 节点选择, ♻️ 自动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Direct.png
 static=🛑 全球拦截, REJECT, DIRECT, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Advertising.png
-static=🐟 漏网之鱼, 🚀 节点选择, 🎯 全球直连, ♻️ 自动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Final.png
+static=🐟 漏网之鱼, 🚀 节点选择, 🎯 全球直连, ♻️ 自动选择, 34, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Final.png
 
 [server_remote]
 
@@ -35,7 +35,7 @@ https://pub-api-1.bianyuan.xyz/getruleset?type=2&url=aHR0cHM6Ly9yYXcuZ2l0aHVidXN
 [rewrite_remote]
 
 [server_local]
-
+vmess = 96.43.86.35:14709, method=chacha20-ietf-poly1305, password=22fb8cd3-d1e9-4514-ba29-e407a9ecd39a, aead=true, fast-open=false, udp-relay=true, tag=34
 
 [filter_local]
 GEOIP,CN,🎯 全球直连
